--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 <body>
     <div class="todo-container">
         <input type="text" id="todo-input" placeholder="할 일을 입력하세요...">
+        <select id="todo-category">
+            <option value="학교">학교</option>
+            <option value="친구">친구</option>
+            <option value="알바">알바</option>
+            <option value="기타">기타</option>
+        </select>
         <button id="add-todo">추가</button>
         <ul id="todo-list"></ul>
     </div>
-
     <script src="app.js"></script> <!-- JavaScript 파일 링크 -->
 </body>
 </html>
